--- a/01_intro/03_lists.ipynb
+++ b/01_intro/03_lists.ipynb
@@ -13,15 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "[1, 'string', 4.5]\n",
-      "[1, True, 4.5]\n"
+      "[1, True, 4.5]\n",
+      "[1, 2, 3, 4]\n"
      ]
     }
    ],
@@ -32,16 +35,19 @@
     "l.append(4.5)\n",
     "print(l)\n",
     "\n",
+    "l2 = [1,2,3,4]\n",
+    "l[1] = True #second elememt\n",
     "\n",
-    "l[1] = True\n",
-    "\n",
-    "print(l)"
+    "print(l)\n",
+    "print(l2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -49,7 +55,7 @@
        "4.5"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,8 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -69,7 +77,7 @@
        "1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,8 +98,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -106,7 +138,7 @@
    ],
    "source": [
     "x = 9\n",
-    "print(f\"Hi! x is {x}\") #since python 3.6\n",
+    "print(f\"Hi! x is {x}\") #since python 3.6: f-string\n",
     "print(\"Hi! x is {0}\".format(x)) #before: 0 is the positional index to the parameter passed in format\n",
     "print(\"Hi! x is {x}\".format(x=x)) #this is what fstrings do\n",
     "print(f\"Hi! {x=}\") #useful for debugging"
@@ -114,8 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -155,13 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0, 1, 2]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
       "[0, 1, 2]\n",
       "[0, 1, 2]\n",
       "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
@@ -171,9 +209,34 @@
    ],
    "source": [
     "print(list_from_range[0:3:1])  # print first 3 elements\n",
+    "l2 = list_from_range[0:3:1]\n",
+    "print(list_from_range)\n",
+    "print(l2)\n",
     "print(list_from_range[:3])\n",
     "print(list_from_range[:-1:])  # last element is excluded\n",
     "print(list_from_range[::-1])  # reverse order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 5, 7, 9]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_from_range[3::2]"
    ]
   },
   {
@@ -208,9 +271,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(list_from_range))"
    ]
@@ -227,13 +300,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 'h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd']\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[1, True, 4.5]\n",
+      "[1, True, 4.5, 1, True, 4.5, 1, True, 4.5]\n",
+      "[1, True, 4.5]\n"
+     ]
+    }
+   ],
    "source": [
-    "# print(list_from_range + list_from_string)\n",
-    "# print(list_from_range)\n",
+    "print(list_from_range + list_from_string)\n",
+    "print(list_from_range)\n",
     "\n",
+    "print(l)\n",
     "print(l * 3)\n",
     "print(l)#original list is not modified"
    ]
@@ -247,8 +335,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -278,8 +368,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['_', '_', '_'], ['_', '_', '_'], ['_', '_', '_']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "\n",
+    "board = [[\"_\"] * 3 for i in range(3)] #no shallow copies. Since i is an unsued variable, I can use _\n",
+    "board = [[\"_\"] * 3 for _ in range(3)]\n",
+    "print(board)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -292,12 +407,6 @@
     }
    ],
    "source": [
-    "a = 2\n",
-    "\n",
-    "board = [[\"_\"] * 3 for i in range(3)] #no shallow copies. Since i is an unsued variable, I can use _\n",
-    "board = [[\"_\"] * 3 for _ in range(3)]\n",
-    "# print(board)\n",
-    "\n",
     "for r in range(3):\n",
     "    for c in range(3):\n",
     "        board[r][c] = \"X\"\n",
@@ -311,8 +420,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 39,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -324,7 +435,7 @@
     }
    ],
    "source": [
-    "odd_numbers = [n for n in range(20) if n % 2]\n",
+    "odd_numbers = [n for n in range(20) if n%2] # 0 in if è come False\n",
     "\n",
     "print(\"odd_numbers\", odd_numbers)\n",
     "\n",
@@ -335,20 +446,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 43,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.33 µs ± 210 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "554 ns ± 2.36 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "#gives you a statistcis: 1.24 µs ± 32.5 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
     "%timeit odd_numbers = [n for n in range(20) if n % 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "627 ns ± 3.17 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "#Analogamente:\n",
+    "odd_numbers = []\n",
+    "for i in range(20):\n",
+    "    if i % 2:\n",
+    "        odd_numbers.append(i)\n",
+    "odd_numbers"
    ]
   },
   {
