--- a/01_intro/02_surving_kit.ipynb
+++ b/01_intro/02_surving_kit.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -409,17 +409,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['BBBB', 'FFFF', 'IIII', 'In', 'Out', 'SSSS', '_', '_4', '_6', '__', '___', '__builtin__', '__builtins__', '__doc__', '__loader__', '__name__', '__package__', '__session__', '__spec__', '_dh', '_i', '_i1', '_i10', '_i11', '_i2', '_i3', '_i4', '_i5', '_i6', '_i7', '_i8', '_i9', '_ih', '_ii', '_iii', '_oh', 'a', 'exit', 'foo', 'get_ipython', 'open', 'quit']\n"
+      "['BBBB', 'FFFF', 'IIII', 'In', 'Out', 'SSSS', '_', '_11', '_13', '_15', '_16', '_17', '_18', '_19', '__', '___', '__builtin__', '__builtins__', '__doc__', '__loader__', '__name__', '__package__', '__session__', '__spec__', '_dh', '_i', '_i1', '_i10', '_i11', '_i12', '_i13', '_i14', '_i15', '_i16', '_i17', '_i18', '_i19', '_i2', '_i20', '_i21', '_i3', '_i4', '_i5', '_i6', '_i7', '_i8', '_i9', '_ih', '_ii', '_iii', '_oh', 'a', 'b', 'exit', 'foo', 'g', 'get_ipython', 'open', 'quit']\n"
      ]
     }
    ],
    "source": [
+    "a = 2\n",
+    "g = False\n",
+    "\n",
     "print(dir())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -428,7 +453,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['BBBB', 'FFFF', 'IIII', 'In', 'Out', 'SSSS', '_', '_4', '_6', '__', '___', '__builtin__', '__builtins__', '__doc__', '__loader__', '__name__', '__package__', '__session__', '__spec__', '_dh', '_i', '_i1', '_i2', '_i3', '_i4', '_i5', '_i6', '_i7', '_i8', '_ih', '_ii', '_iii', '_oh', 'a', 'exit', 'foo', 'get_ipython', 'open', 'quit']\n"
+      "['BBBB', 'FFFF', 'IIII', 'In', 'Out', 'SSSS', '_', '__', '___', '__builtin__', '__builtins__', '__doc__', '__loader__', '__name__', '__package__', '__session__', '__spec__', '_dh', '_i', '_i1', '_ih', '_ii', '_iii', '_oh', 'exit', 'foo', 'get_ipython', 'open', 'quit']\n"
      ]
     }
    ],
@@ -448,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -474,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -483,7 +508,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4309762352 4309762352\n",
+      "4334731568 4334731568\n",
       "True\n"
      ]
     }
@@ -991,11 +1016,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'for' statement on line 1 (642038798.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(\"dopo for\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'for' statement on line 1\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(4): # error expected\n",
     "    \n",
@@ -1004,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -1023,13 +1057,6 @@
     "\n",
     "print(\"dopo for\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
